@@ -3,6 +3,8 @@
 
 - Resolved task #14219: Refactor grid drawing to be less susceptible to
   floating point inaccuracies
+- Implemented feature #12897: Add the possibility to have a subtitle for
+  Graphs.
 
 
 1.4 - Monday 05 January 2009
